# internal-platform-api

./: .dockerignore  .gitignore  .gitmodules  AI_CONTEXT.md  Dockerfile  Makefile  README.md  REFACTOR_PLAN.md  activate_venv.sh  build-image.sh  docker-compose.yml  envctl.db  helm-install.sh  kafka-nodepools.yaml  platform-apps-user.yaml  platform-events-topic.yaml  port-forward.sh  pyproject.toml  sonar-project.properties  test_envctl.db  uninstall.sh
.github/workflows/: deploy.yml  pipeline.yml
app/: main.py
app/api/v1/: auth.py  deployments.py  (+2 more)
app/core/: config.py  database.py  exceptions.py  security.py  user.py
app/models/: __init__.py  deployment.py  environment.py  project.py  user.py
app/schemas/: deployment.py  environment.py  project.py
app/services/: deployments.py  projects.py  provisioning.py
backend/: ARCHITECTURE.md  Makefile  pyproject.toml
backend/app/: main.py
backend/tests/: test_config.py
envctl-chart/: Chart.yaml  values.yaml
envctl-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
frontend/: ARCHITECTURE.md  Dockerfile  Makefile  README.md  angular.json  nginx.conf  package-lock.json  package.json  test.js  test2.js  test3.js
frontend/src/: index.html  styles.css
scripts/: smoke_test.py
terraform/: backend.tf  main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_auth.py  test_platfom_flow.py
tests/api/: test_health.py
tests/unit/: test_deployments.py
(+85 files in other folders)
